# libcodeinjector

./: CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: coverage.yml  main.yml
include/codeinjector/: inject.hpp
source/: inject.cpp
test/: CMakeLists.txt
test/source/: codeinjector-caller.cpp  codeinjector-test.cpp  codeinjector-test.py  injected-library.cpp  injection-target.cpp
